[package]
name = "dotulous"
description = "A fast and easy way to quickly manage dotfiles."
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1.0"
